Forge description imp

--- a/public/project.html
+++ b/public/project.html
@@ -66,10 +66,10 @@
                 viewPDF.innerHTML = 'View Community Partner PDF ↴';
               }
             }
-            
-            // redirect open blank
+
+
             function forgeRedirect() {
-              window.open('https://www.scu.edu/sustainability/forgegarden/', '_blank');
+              window.location.href = "./forge";
             }
           </script>
           <div class='embed-responsive' id="pdf" style='padding-bottom:100%; display: none;'>
