PDF of research inserted

--- a/public/project.html
+++ b/public/project.html
@@ -77,6 +77,9 @@
           </div>
 
           <p>The Forge Garden is a community center where staff, instructors, and students learn about sustainable food and agricultural practices, located near Santa Clara University. Additionally, it's a friendly place where members of the larger community can congregate and learn about sustainable living methods.</p>
+          <div class='embed-responsive' style='padding-bottom:60%;'>
+            <object data='/etc/Water_Feature_Revision_1.pdf' type='application/pdf' width='100%' height='100%'></object>
+          </div>
         </div>
       </div>
     </div>
