--- a/public/project.html
+++ b/public/project.html
@@ -172,7 +172,11 @@
           <button class="btn btn-primary" id="button4" onclick="handleButton4()">&blank;</button>
         </div>
         <div class='embed-responsive' id="pdf4" style='padding-bottom:100%; display: none;'>
-          <object data='/etc/erick_sketch.pdf' type='application/pdf' width='50%' height='80%'></object>
+          
+          <div class="container">
+            <p>Team work is an essential part of the project. Here is some documents of our team work.</p>
+          </div>
+          <object style="position: relative; height: 55rem;" data='/etc/erick_sketch.pdf' type='application/pdf' width='50%' ></object>
         </div>
         <script>
           function handleButton4() {
