--- a/public/home.html
+++ b/public/home.html
@@ -95,19 +95,20 @@
   </section>
   <section>
     <div class="container">
+      <!-- Add some text below if I wanted to -->
       <div class="row">
         <div class="col-12 text-center">
-          <p>Coming soon!</p>
+          <p></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/400x400.gif" alt="">
-          <h4>Photo 1</h4>
-          <h6>Caption 1</h6>
+        <div class="col-md-6 col-12 text-center"> <img class="img-fluid" src="images/garden_1.jpeg" alt="">
+          <h4>Forge Garden</h4>
+          <h6>Many livestocks, and a nice place to hangout.</h6>
         </div>
-        <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/400x400.gif" alt="">
-          <h4>Photo 2</h4>
-          <h6>Caption 2</h6>
+        <div class="col-md-6 col-12 text-center mt-md-0 mt-2"> <img class="img-fluid" src="images/flower_bed1.jpeg" alt="">
+          <h4>Flower Bed</h4>
+          <h6>We are going to integrate a water feature near this flower bed.</h6>
         </div>
       </div>
       <div class="row mt-2">
