--- a/public/project.html
+++ b/public/project.html
@@ -78,9 +78,9 @@
 
           <p>The Forge Garden is a community center where staff, instructors, and students learn about sustainable food and agricultural practices, located near Santa Clara University. Additionally, it's a friendly place where members of the larger community can congregate and learn about sustainable living methods.</p>
           <div class='embed-responsive' style='padding-bottom:60%;'>
-            <!-- <object data='/etc/Water_Feature_Revision_1.pdf' type='application/pdf' width='100%' height='100%'></object> -->
+            <object data='/etc/Water_Feature_Research.pdf' type='application/pdf' width='100%' height='100%'></object>
             <!-- incorporate my html PDF of water feature /etc/WaterFeaturePDF.html into iframe make it 100% width and full height, scale it by factor of 1/2-->
-            <iframe id="wfpdf" src="/etc/WaterFeaturePDF.html"></iframe>
+            <!-- <iframe id="wfpdf" src="/etc/WaterFeaturePDF.html"></iframe> -->
 
           </div>
         </div>
@@ -306,9 +306,6 @@
       }
     }
 
-    #wfpdf {
-      zoom: 0.5;
-    }
   </style>
 </body>
 
