--- a/public/about.html
+++ b/public/about.html
@@ -123,17 +123,20 @@
   </section>
   <hr>
   <section>
-    <h3 class="text-center">My Summer 2024</h3>
+    <h3 class="text-center">My 2024</h3>
     <div class="container">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner text-center">
-          <div class="carousel-item active"> <img class="d-block w-100" src="images/s1-c.png" alt="First slide">
+          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/GGB_RATIO.png" alt="GGB">
+            <p style="margin-bottom: 2rem;">"Life's Amazing" - 11/11</p>
+          </div>
+          <div class="carousel-item active"> <img class="d-block w-100" src="images/s1-c.png" alt="Hiking GGB 9 miles">
             <p style="margin-bottom: 2rem;">Hiked 9 Miles - 09/12</p>
           </div>
-          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Second slide">
+          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s2-c.png" alt="Ocean Beach Sunset">
             <p style="margin-bottom: 2rem;">Watched Sunset at the Beach - 07/21</p>
           </div>
-          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s3-c.png" alt="Third slide">
+          <div class="carousel-item"> <img loading="lazy" class="d-block w-100" src="images/s3-c.png" alt="Illenium">
             <p style="margin-bottom: 2rem;">Went to a Rave - 07/19</p>
           </div>
         </div>
@@ -141,6 +144,7 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" style="background-color: black !important;"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1" style="background-color: black !important;"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2" style="background-color: black !important;"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3" style="background-color: black !important;"></li>
         </ol>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
       </div>
